package model.enums;

public enum TransactionType {
    DEPOSIT,
    WITHDRAW,
    TRANSFER,
    PAYMENT,
    LOAN
}
