package model.services;

public interface PaymentService {
    Double applyFee(Double amount);
}
